--- a/verslag/verslag.tex
+++ b/verslag/verslag.tex
@@ -26,7 +26,7 @@
 \section{Tessellaties van Escher}
 
 \begin{onderzoeksvraag}
-Bepaalde kunstwerken van {\it Escher} vullen een vlak met één figuur, waarbij de figuur wordt getransleerd en eventueel geroteerd. Bestaat er een methode om zelf een figuur te ontwerpen die een vlak zo kan vullen?
+Bepaalde kunstwerken van {\it Escher} vullen een vlak met éénzelfde figuur, waarbij de figuur telkens wordt getransleerd en eventueel geroteerd. Bestaat er een methode om zelf een figuur te ontwerpen die een vlak zo kan vullen?
 \end{onderzoeksvraag}
 
 Een voorbeeld van een kunstwerk van Escher waarbij een vlak wordt gevuld met vliegende vissen staat in Figuur \ref{fig:E73}. Deze prent komt uit een reeks van sketchboeken, {\it Regular Division of the Plane Drawings}, die Escher had aangelegd als een bron van ideeën om patronen te kunnen gebruiken in zijn afgewerkte kunstwerken. In het totaal zijn 137 gelijkaardige vlakvullingen te vinden in de sketchboeken.
